got link working

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="content1">
           <h4>WeGig App</h4>
           <p>WeGig provides a mobile booking platform that helps venue operators find new acts, helps musicians find new venues, and enables clear communication about performance expectations and payment for both parties.</p>
-          <button>View Project</button>
+          <button><a href="case1bootstrap.html">View Project</a></button>
         </div>
         <div class="img2">
           <img src="images/roygbot.png">
