--- a/case1bootstrap.html
+++ b/case1bootstrap.html
@@ -16,7 +16,7 @@
       <img src="images/logoplaceholder1.png" alt="logo">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
